--- a/NEURODASH/views/home.html
+++ b/NEURODASH/views/home.html
@@ -178,7 +178,12 @@
                         <span class="text-white">Se ha cambiado la contraseña eres tu?</span>
                       </a>
                     </li>
-
+                    <li class="m-2">
+                      <a href="../views/creditos/credito.html" class="dropdown-item menu p-2">
+                        <img class="icon-home" src="../assets/img/iconos/image__4_-removebg-preview.png" alt="" />
+                        <span class="text-white">Creditos</span>
+                      </a>
+                    </li>
                   </ul>
                 </div>
               </li>
