--- a/NEURODASH/views/juego/pasaPalabras/pasaPalabras.html
+++ b/NEURODASH/views/juego/pasaPalabras/pasaPalabras.html
@@ -21,11 +21,11 @@
         </div>
     </div>
 
-    <a href="../../home.html" class="col d-flex justify-content-start ms-4">
+    <a href="../../home.html">
         <img src="../../../assets/img/iconos/home.png" alt="flecha-develover" class="devolver-home">
     </a>
     
-    <div class="container-fluid aling-item-centerN min-vh-100">
+    <div class="container-fluid aling-item-centerN min-vh-100 ">
         <section id="pantalla-inicial" class="fondo-section aling-item-centerN flex-column p-5 w-100">
             <h1 class="mb-4 letra">PASAPALARAS</h1>
             <button id="btn-comenzar" class="btn-pasaPalabra">
