--- a/NEURODASH/assets/css/pages/cartas.css
+++ b/NEURODASH/assets/css/pages/cartas.css
@@ -1,28 +1,25 @@
+.background-ft{
+  background-image: url(../../img/fondos-pantalla/fondoSalas.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat:no-repeat;
+}
 .sectionOne{
     background-color: rgba(255, 255, 255, 0.2);
     border-radius: 8px;
+    margin-top: 100px;
 }
-
-
-.btnCartas{
-    height: 100px;
-    width: 100px;
-    font-size: 40px;
-    color: white;
-    font-weight: bold;
-}
-
-.btnCartas:hover{
-    cursor: pointer;
-}
-
 .sectionTwo {
+    display: flex;
+    flex-direction: column;
     background-color: rgba(255, 255, 255, 0.2);
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
     width: 350px;
-    height: 400px;
-    padding: 0 20px;
+    height: 100%;
+    font-family:'Jersey';
+    font-size: 2.3rem;
+
 }
 
 .estadisticasCar {
@@ -39,10 +36,11 @@
 .contenedor-loader{
     background: rgb(0, 0, 0);
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1;
 }
 
 
@@ -51,8 +49,9 @@
 }
 
 .devolver-home{
-    width: 70px;
-    height: 70px;
+  width: 60px;
+  height: 60px;
+  z-index: 1;
 }
 .grid-container {
     display: grid;
@@ -60,43 +59,60 @@
     gap: 5px;
     max-width: 450px;
     justify-items: center;
+    padding: 10px;
 }
 .container-cartas {
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-    justify-content: center;
-    align-items: center;
-}
-.container-estadistica-2{
     display: flex;
     flex-direction: row;
     justify-items: center;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    
+}
+.container-estadistica{
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  padding: 15px;  
 }
 @media only screen and (max-width: 428px) and (max-height: 926px) {
     .container-cartas{
-        overflow-y: scroll;
-        padding: 15px;
+      overflow-y: scroll;
+      padding: 15px;
+      display: flex;
+      flex-direction: column;
+      justify-items: center;
+      justify-content: center;
+      align-items: center;
     }
+    .container-estadistica{
+      display: flex;
+      flex-direction: row;
+      justify-content: center; 
+      text-align: center;  
+      margin: 0;
+      
+    }
+    .sectionTwo {
+      font-family:'Jersey';
+      font-size: 1.4rem;
+      display: flex;
+      flex-direction: row;
+      background-color: rgba(255, 255, 255, 0.2);
+      width: 100%;
+      height: 150px;
+      padding: 10px;
+  }
     .devolver-home{
         width: 70px;
         height: 70px;
     }
+    .sectionOne{
+      background-color: rgba(255, 255, 255, 0.2);
+      border-radius: 8px;
+      margin-top: 0;
+  }
 }
-@media only screen and (max-width: 320px) and (max-height: 568px) {
-    .container-cartas{
-        overflow-y: scroll;
-        padding: 25px;
-    }
-    .devolver-home{
-        width: 70px;
-        height: 70px;
-    }
-}
+
 
 .loading-circle {
     position: absolute;
@@ -172,4 +188,66 @@
       transform: rotate(405deg);
     }
   }
+
+  .img-fruta {
+    width: 100%; 
+    height: 100%;
+    object-fit: cover;
+}
+.btnCartas {
+  height: 100px;
+  width: 100px;
+  perspective: 1000px;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.btnCartas-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: transform 0.6s;
+}
+
+.btnCartas-inner.flipped {
+  transform: rotateY(180deg);
+}
+
+.btnCartas-front {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  background-image: url('../../img/fondos-pantalla/fogata.png');
+  background-size: cover;
+  background-position: center;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+.btnCartas-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden; 
+  transform: rotateY(180deg);
+  background-color: #fff; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+.img-fruta {
+  max-width: 80%;
+  max-height: 80%;
+  border-radius: 5px;
+}
+
+#mensajeFinal{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   
+}
