--- a/NEURODASH/assets/css/pages/creditos.css
+++ b/NEURODASH/assets/css/pages/creditos.css
@@ -48,3 +48,12 @@ body{
     }
 }
 
+/* .home-back{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    color: #fff;
+    font-size: 20px;
+    text-decoration: none;
+    z-index: 1;
+} */
