--- a/NEURODASH/views/juego/cartas.html
+++ b/NEURODASH/views/juego/cartas.html
@@ -13,60 +13,135 @@
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
         <link href="../../assets/css/pages/cartas.css" rel="stylesheet">
     </head>
-    <body class="background-cartas">
-
-        <div class="contenedor-loader" id="loadingScreen">
-            <div class="loading-screen" id="loadingScreen">
-                <div class="loading-circle">Loading...</div>
+    <body class="background-ft">
+        <!-- <div class="contenedor-loader" id="loadingScreen">
+            <div class="loading-screen z-0" id="loadingScreen">
+                <div class="loading-circle z-n1">Loading...</div>
                 <span></span>
             </div>
+        </div> -->
+        <div class="cart-home">
+            <a href="../home.html">
+                <img src="../../assets/img/iconos/home.png" alt="flecha-develover" class="devolver-home">
+            </a>
         </div>
-        <a href="../home.html" class="col-4 d-flex justify-content-start ms-3">
-            <img src="../../assets/img/iconos/home.png" alt="flecha-develover" class="devolver-home">
-        </a>
-
-        <main class="d-flex justify-content-center align-items-center mt-5">
-
+        <main class="d-flex justify-content-center align-items-center">
             
-            <section class="sectionOne" id="cart">
-                <div class="container-cartas ">
-                    <section class="sectionTwo-navar d-lg-none">
-                        <div class="container-estadistica-2 d-flex justify-content-between align-items-center">
-                            <h4 id="mensajeFinal"></h4>
-                            <h2 class="estadisticasCar" id="aciertos">Aciertos: 0</h2>
-                            <h2 class="estadisticasCar" id="tiempo restante">Tiempo: 30 segundos</h2>
-                            <h2 class="estadisticasCar" id="movimientos">Movimientos: 0</h2>
+            
+            <section class="sectionOne" >
+                <div class="container-cartas">
+                    <section class="sectionTwo">
+                        <div class="container-estadistica"id="cart">
+                            <span id="mensajeFinal"></span>
+                            <span class="estadisticasCar" id="aciertos">Aciertos: 0</span>
+                            <span class="estadisticasCar" id="tiempo-restante">Tiempo: 30 segundos</span>
+                            <span class="estadisticasCar" id="movimientos">Movimientos: 0</span>
                         </div>
                     </section>
                     <div class="grid-container">
-                        <button id="0" onclick="destapar(0)" class="btnCartas"></button>
-                        <button id="1" onclick="destapar(1)" class="btnCartas"></button>
-                        <button id="2" onclick="destapar(2)" class="btnCartas"></button>
-                        <button id="3" onclick="destapar(3)" class="btnCartas"></button>
-                        <button id="4" onclick="destapar(4)" class="btnCartas"></button>
-                        <button id="5" onclick="destapar(5)" class="btnCartas"></button>
-                        <button id="6" onclick="destapar(6)" class="btnCartas"></button>
-                        <button id="7" onclick="destapar(7)" class="btnCartas"></button>
-                        <button id="8" onclick="destapar(8)" class="btnCartas"></button>
-                        <button id="9" onclick="destapar(9)" class="btnCartas"></button>
-                        <button id="10" onclick="destapar(10)" class="btnCartas"></button>
-                        <button id="11" onclick="destapar(11)" class="btnCartas"></button>
-                        <button id="12" onclick="destapar(12)" class="btnCartas"></button>
-                        <button id="13" onclick="destapar(13)" class="btnCartas"></button>
-                        <button id="14" onclick="destapar(14)" class="btnCartas"></button>
-                        <button id="15" onclick="destapar(15)" class="btnCartas"></button>
+                        <button id="0" onclick="destapar(0)" class="btnCartas">
+                            <div class="btnCartas-inner">
+                                <div class="btnCartas-front"></div>
+                                <div class="btnCartas-back"></div>
+                            </div>
+                        </button>
+                        <button id="1" onclick="destapar(1)" class="btnCartas">
+                            <div class="btnCartas-inner">
+                                <div class="btnCartas-front"></div>
+                                <div class="btnCartas-back"></div>
+                            </div>
+                        </button>
+                        <button id="2" onclick="destapar(2)" class="btnCartas">
+                            <div class="btnCartas-inner">
+                                <div class="btnCartas-front"></div>
+                                <div class="btnCartas-back"></div>
+                            </div>
+                        </button>
+                        <button id="3" onclick="destapar(3)" class="btnCartas">
+                            <div class="btnCartas-inner">
+                                <div class="btnCartas-front"></div>
+                                <div class="btnCartas-back"></div>
+                            </div>
+                        </button>
+                        <button id="4" onclick="destapar(4)" class="btnCartas">
+                            <div class="btnCartas-inner">
+                                <div class="btnCartas-front"></div>
+                                <div class="btnCartas-back"></div>
+                            </div>
+                        </button>
+                        <button id="5" onclick="destapar(5)" class="btnCartas">
+                            <div class="btnCartas-inner">
+                                <div class="btnCartas-front"></div>
+                                <div class="btnCartas-back"></div>
+                            </div>
+                        </button>
+                        <button id="6" onclick="destapar(6)" class="btnCartas">
+                            <div class="btnCartas-inner">
+                                <div class="btnCartas-front"></div>
+                                <div class="btnCartas-back"></div>
+                            </div>
+                        </button>
+                        <button id="7" onclick="destapar(7)" class="btnCartas">
+                            <div class="btnCartas-inner">
+                                <div class="btnCartas-front"></div>
+                                <div class="btnCartas-back"></div>
+                            </div>
+                        </button>
+                        <button id="8" onclick="destapar(8)" class="btnCartas">
+                            <div class="btnCartas-inner">
+                                <div class="btnCartas-front"></div>
+                                <div class="btnCartas-back"></div>
+                            </div>
+                        </button>
+                        <button id="9" onclick="destapar(9)" class="btnCartas">
+                            <div class="btnCartas-inner">
+                                <div class="btnCartas-front"></div>
+                                <div class="btnCartas-back"></div>
+                            </div>
+                        </button>
+                        <button id="10" onclick="destapar(10)" class="btnCartas">
+                            <div class="btnCartas-inner">
+                                <div class="btnCartas-front"></div>
+                                <div class="btnCartas-back"></div>
+                            </div>
+                        </button>
+                        <button id="11" onclick="destapar(11)" class="btnCartas">
+                            <div class="btnCartas-inner">
+                                <div class="btnCartas-front"></div>
+                                <div class="btnCartas-back"></div>
+                            </div>
+                        </button>
+                        <button id="12" onclick="destapar(12)" class="btnCartas">
+                            <div class="btnCartas-inner">
+                                <div class="btnCartas-front"></div>
+                                <div class="btnCartas-back"></div>
+                            </div>
+                        </button>
+                        <button id="13" onclick="destapar(13)" class="btnCartas">
+                            <div class="btnCartas-inner">
+                                <div class="btnCartas-front"></div>
+                                <div class="btnCartas-back"></div>
+                            </div>
+                        </button>
+                        <button id="14" onclick="destapar(14)" class="btnCartas">
+                            <div class="btnCartas-inner">
+                                <div class="btnCartas-front"></div>
+                                <div class="btnCartas-back"></div>
+                            </div>
+                        </button>
+                        <button id="15" onclick="destapar(15)" class="btnCartas">
+                            <div class="btnCartas-inner">
+                                <div class="btnCartas-front"></div>
+                                <div class="btnCartas-back"></div>
+                            </div>
+                        </button>
+                        
                     </div>
                 </div>
             </section>
-            <section class="sectionTwo d-none d-lg-flex flex-column">
-                <div class="container-estadistica">
-                    <h4 id="mensajeFinal"></h4>
-                    <h2 class="estadisticasCar" id="aciertos">Aciertos: 0</h2>
-                    <h2 class="estadisticasCar" id="tiempo restante">Tiempo: 30 segundos</h2>
-                    <h2 class="estadisticasCar" id="movimientos">Movimientos: 0</h2>
-                </div>
-            </section>
+            
         </main>
+        
     <!-- <audio id="background-music" src="musica/WhatsApp Audio 2024-09-11 at 8.50.35 PM.mpeg" loop></audio> -->
        <script src="../../assets/js/page/cartas.js"></script>
        <script src="../../lib/bootstrap/js/bootstrap.bundle.min.js"></script>
