--- a/NEURODASH/views/creditos/credito.html
+++ b/NEURODASH/views/creditos/credito.html
@@ -14,7 +14,7 @@
 <body class="background-creditos">
     <div class="container animacion mt-5 d-flex justify-content-center text-center">
         <div class="credits_logo background-logo"></div>
-        <!-- <a  href="../home.html" type="button" class="home-back">back</a> -->
+        <a  href="../home.html" type="button" class="home-back">back</a>
         <div class="credits-container">
             <div class="credits">
                 <h1>Créditos</h1>
