--- a/NEURODASH/assets/css/pages/creditos.css
+++ b/NEURODASH/assets/css/pages/creditos.css
@@ -48,7 +48,7 @@ body{
     }
 }
 
-/* .home-back{
+.home-back{
     position: absolute;
     top: 10px;
     left: 10px;
@@ -56,4 +56,4 @@ body{
     font-size: 20px;
     text-decoration: none;
     z-index: 1;
-} */
+}
