--- a/NEURODASH/assets/css/main.css
+++ b/NEURODASH/assets/css/main.css
@@ -43,6 +43,7 @@
 @import url('pages/salasDisponibles.css');
 @import url('pages/unirserSala.css');
 @import url('pages/crearSala.css');
+@import url('pages/ranking.css');
 
 /* ************************* theme ************************* */
 
