--- a/NEURODASH/views/home.html
+++ b/NEURODASH/views/home.html
@@ -75,16 +75,16 @@
         
         <!-- Información de ligas -->
         <div class="dropdown ligas">
-          <button type="button" class="btn fondo-btn btn-nav" data-bs-toggle="dropdown" aria-expanded="false" aria-label="Menú de ligas">
+          <!-- <button type="button" class="btn fondo-btn btn-nav" data-bs-toggle="dropdown" aria-expanded="false" aria-label="Menú de ligas">
             <span>Ligas:</span>
             <img class="icon-navLigas" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Icono de ligas" />
-          </button>
+          </button> -->
           
           <div class="dropdown-menu dropdown-menu-end justify-content-center dropdown-menu-lg-start mt-3 bg-dark p-2" style="width: 20rem;">
-            <div class="aling-item-centerN m-2">
+            <!-- <div class="aling-item-centerN m-2">
               <h5 class="txtliga">BRONCE</h5>
               <img class="icon-liga" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Liga" />
-            </div>
+            </div> -->
             <table class="table table-danger table-bordered">
               <thead>
                 <tr>
@@ -94,7 +94,6 @@
                 </tr>
               </thead>
               <tbody class="table-bordered" id="tablaJugadores">
-                <!-- Se completa con JavaScript -->
               </tbody>
             </table>
             <div class="text-end me-3">
@@ -113,7 +112,7 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <!-- Opciones adicionales (Historial, Notificaciones, Configuraciones) -->
-              <li class="nav-item m-1">
+              <!-- <li class="nav-item m-1">
                 <div class="dropdown">
                   <button type="button" class="btn fondo-btn btn-nav" data-bs-toggle="dropdown" aria-expanded="false">
                     <img class="icon-home" src="../assets/img/iconos/icon-historial.png" alt="Historial" />
@@ -149,7 +148,7 @@
                     </li>
                   </ul>
                 </div>
-              </li>
+              </li> -->
               <li class="nav-item m-1">
                 <div class="dropdown">
                   <button type="button" class="btn fondo-btn btn-nav" data-bs-toggle="dropdown" aria-expanded="false">
