--- a/NEURODASH/views/topi-memori/topiMemori.html
+++ b/NEURODASH/views/topi-memori/topiMemori.html
@@ -36,20 +36,13 @@
       <div class="col-12 d-flex justify-content-center align-items-center cardDifiTopy" style="position: relative;">
           <img src="../../assets/img/iconos-principales/topLogo.png" alt="logo" class="lgoTop">
           
-           
-            <!-- <a href="memorTopy.html" class="btn-facil">
-              FACIL
-            </a>
-            <a href="memorTopy.html" class="btn-medio">
-              MEDIO
-            </a>
-            <a href="memorTopy.html" class="btn-dificil">
-             DIFICIL
-            </a> -->
+          <button class="btn-facil difTopy" value="facil" onclick="setDifficulty('facil')">FACIL</button>
+          <button class="btn-medio difTopy" value="medio" onclick="setDifficulty('medio')">MEDIO</button>
+          <button class="btn-dificil difTopy" value="dificil" onclick="setDifficulty('dificil')">DIFICIL</button>
+
       </div>
     </div>
       
-  
   <!-- Modal -->  
   <div class="modal fade" id="modalTopy" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
@@ -67,10 +60,9 @@
       </div>
     </div>
   </div>
-
   <script src="../../lib/bootstrap/js/bootstrap.js"></script>
-  <script src="../../controller/topy/dificultad.js"></script>
-  <script src="../../assets/js/entrenamiento/animacion1.js"></script>
+  <script src="../../assets/js/page/topi.js"></script>
+  <!-- <script src="../../assets/js/entrenamiento/animacion1.js"></script> -->
 
   <!-- <script type="module" src="../../assets/js/main.js"></script> -->
 </body>
